--- a/cameratest/cameratest/cameratest/Login.xaml
+++ b/cameratest/cameratest/cameratest/Login.xaml
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="cameratest.Login">
+             x:Class="cameratest.Login"
+                           BackgroundColor="White">
   <ContentPage.Padding>
     <OnPlatform x:TypeArguments="Thickness"
                 iOS="20, 40, 20, 20"
-                Android="20, 20, 20, 20"
+                Android="20, 5, 20, 20"
                 WinPhone="20, 20, 20, 20" />
   </ContentPage.Padding>
   <ContentPage.Content>
@@ -14,18 +15,21 @@
                  Orientation="Vertical"
                  Spacing="15">
 
-      <StackLayout VerticalOptions="Fill"
-      HorizontalOptions="Fill"
-      Orientation="Horizontal"
-      Spacing="15">
-        <Button x:Name="about" Text="i" IsEnabled="True" HorizontalOptions = "Center"/>
-        <Button x:Name="settings" Text="settings" IsEnabled="True" HorizontalOptions = "End" Clicked="openSettings"/>
+      <StackLayout HorizontalOptions = "End"
+                   VerticalOptions="Fill"
+                    Orientation="Horizontal"
+                    Spacing="1">
+
+        <Button x:Name="about" IsEnabled="True" Image="info.png" BackgroundColor="White"/>
+        <Button x:Name="settings" IsEnabled="True" Clicked="openSettings" Image="settings.png" BackgroundColor="White"/>
       </StackLayout>
+      
+      <Image Source="logo_hintergrund.jpg" />
 
       <Label Text="E-Mail" />
       <Entry x:Name="eMail"/>
       <Label Text="Passwort" />
-      <Entry x:Name="password"  />
+      <Entry x:Name="password" IsPassword="true"  />
       <Button x:Name="logIn" Text="Login" IsEnabled="True" Clicked="loggedIn" />
     </StackLayout>
   </ContentPage.Content>
