--- a/cameratest/cameratest/cameratest/ChangePassword.xaml
+++ b/cameratest/cameratest/cameratest/ChangePassword.xaml
@@ -1,23 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="cameratest.ChangePassword">
+             x:Class="cameratest.ChangePassword"
+             BackgroundColor="White">
   <!--<Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />-->
-
+  <ContentPage.Padding>
+    <OnPlatform x:TypeArguments="Thickness"
+                iOS="20, 40, 20, 20"
+                Android="20, 5, 20, 20"
+                WinPhone="20, 20, 20, 20" />
+  </ContentPage.Padding>
   <ContentPage.Content>
     <StackLayout VerticalOptions="FillAndExpand"
                  HorizontalOptions="FillAndExpand"
                  Orientation="Vertical"
                  Spacing="15">
 
-      <StackLayout VerticalOptions="Fill"
-      HorizontalOptions="Fill"
-      Orientation="Horizontal"
-      Spacing="15">
-        <Button x:Name="about" Text="i" IsEnabled="True" HorizontalOptions = "Center"/>
-        <Button x:Name="settings" Text="settings" IsEnabled="True" HorizontalOptions = "End" Clicked="openSettings"/>
-      </StackLayout>
+      <StackLayout HorizontalOptions = "End"
+                   VerticalOptions="Fill"
+                    Orientation="Horizontal"
+                    Spacing="1">
 
+        <Button x:Name="about" IsEnabled="True" Image="info.png" BackgroundColor="White"/>
+        <Button x:Name="settings" IsEnabled="True" Clicked="openSettings" Image="settings.png" BackgroundColor="White"/>
+      </StackLayout>
+      <Image Source="logo_hintergrund.jpg" />
+      
       <Label Text="Bisheriges Passwort" />
       <Entry x:Name="oldPassword"/>
       <Label Text="neues Passwort" />
@@ -25,6 +33,7 @@
       <Label Text="neues Passwort wiederholen" />
       <Entry x:Name="newPasswordRepeat"  />
       <Button x:Name="changePassword" Text="Passwort ändern" IsEnabled="True" Clicked="changedPassword" />
+      
     </StackLayout>
   </ContentPage.Content>
 </ContentPage>
