--- a/cameratest/cameratest/cameratest/Settings.xaml
+++ b/cameratest/cameratest/cameratest/Settings.xaml
@@ -21,7 +21,7 @@
                       Orientation="Horizontal"
                       Spacing="1">
 
-          <Button x:Name="about" IsEnabled="True" Image="info.png" BackgroundColor="White"/>
+          <Button x:Name="about" IsEnabled="True" Clicked="openInfoPage" Image="info.png" BackgroundColor="White"/>
           <Button x:Name="settings" IsEnabled="False" Clicked="openSettings" Image="settings_greyed.png" BackgroundColor="White"/>
         </StackLayout>
 
