--- a/cameratest/cameratest/cameratest/BugReporting.xaml
+++ b/cameratest/cameratest/cameratest/BugReporting.xaml
@@ -70,13 +70,14 @@
                     Orientation="Horizontal"
                     Spacing="0">
         
-          <Image x:Name="image"  />
-          <Image x:Name="image2"  />
-          <Image x:Name="image3" />
+        
+          <Image x:Name="image"/>
+          <Image x:Name="image2"/>
+          <Image x:Name="image3"/>
       
       </StackLayout>
       
-        <Button x:Name="sendReport" Text="Senden" IsEnabled="True"/>
+        <Button x:Name="sendReport" Text="Senden" IsEnabled="True" Clicked="sendingReport"/>
       </StackLayout>
     </ScrollView>
   </ContentPage.Content>
