--- a/cameratest/cameratest/cameratest/ChangePassword.xaml
+++ b/cameratest/cameratest/cameratest/ChangePassword.xaml
@@ -26,12 +26,14 @@
       </StackLayout>
       <Image Source="logo_hintergrund.jpg" />
       
+      <Label Text="E-Mail" />
+      <Entry x:Name="eMail"/>
       <Label Text="Bisheriges Passwort" />
-      <Entry x:Name="oldPassword"/>
+      <Entry x:Name="oldPassword" IsPassword="true"/>
       <Label Text="neues Passwort" />
-      <Entry x:Name="newPassword"  />
+      <Entry x:Name="newPassword" IsPassword="true" />
       <Label Text="neues Passwort wiederholen" />
-      <Entry x:Name="newPasswordRepeat"  />
+      <Entry x:Name="newPasswordRepeat"  IsPassword="true" Completed="Completed_newPasswordRepeat"/>
       <Button x:Name="changePassword" Text="Passwort ändern" IsEnabled="True" Clicked="changedPassword" />
       
     </StackLayout>
