Removed login from navigation after logging in, added scrollviews

--- a/cameratest/cameratest/cameratest/ChangePassword.xaml
+++ b/cameratest/cameratest/cameratest/ChangePassword.xaml
@@ -11,6 +11,7 @@
                 WinPhone="20, 20, 20, 20" />
   </ContentPage.Padding>
   <ContentPage.Content>
+    <ScrollView>
     <StackLayout VerticalOptions="FillAndExpand"
                  HorizontalOptions="FillAndExpand"
                  Orientation="Vertical"
@@ -37,5 +38,6 @@
       <Button x:Name="changePassword" Text="Passwort ändern" IsEnabled="True" Clicked="changedPassword" />
       
     </StackLayout>
+      </ScrollView>
   </ContentPage.Content>
 </ContentPage>
