--- a/cameratest/cameratest/cameratest/MainPage.xaml
+++ b/cameratest/cameratest/cameratest/MainPage.xaml
@@ -10,7 +10,7 @@
                     WinPhone="20, 20, 20, 20" />
      </ContentPage.Padding>
     <ContentPage.Content>
-     
+      <ScrollView>
         <StackLayout VerticalOptions="FillAndExpand"
                      HorizontalOptions="FillAndExpand"
                      Orientation="Vertical"
@@ -33,5 +33,6 @@
           <Button x:Name="machLogin" Text="Login" IsEnabled="True" Clicked="loggedIn" />
           <Button x:Name="machRegistrierig" Text="Registrierung" IsEnabled="True" Clicked="OnCallRegistrierung" />
         </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
