Style corrections for iOS

--- a/cameratest/cameratest/cameratest.iOS/Resources/LaunchScreen.storyboard
+++ b/cameratest/cameratest/cameratest.iOS/Resources/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="X5k-f2-b5h">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="X5k-f2-b5h">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -12,19 +13,49 @@
                         <viewControllerLayoutGuide type="top" id="Y8P-hJ-Z43"/>
                         <viewControllerLayoutGuide type="bottom" id="9ZL-r4-8FZ"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="yd7-JS-zBw">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <view contentMode="scaleToFill" id="53" key="view">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" image="Icon-60.png" translatesAutoresizingMaskIntoConstraints="NO" id="23">
-                                <rect key="frame" x="270" y="270" width="60" height="60"/>
-                                <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="59" translatesAutoresizingMaskIntoConstraints="NO">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <variation key="heightClass=regular-widthClass=compact" image="logo_hintergrund.jpg"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.20392156862745098" green="0.59607843137254901" blue="0.85882352941176465" alpha="1" colorSpace="calibratedRGB"/>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="59"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="64"/>
+                                <exclude reference="65"/>
+                                <exclude reference="68"/>
+                                <exclude reference="69"/>
+                                <exclude reference="70"/>
+                                <exclude reference="71"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="59"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="64"/>
+                                <include reference="65"/>
+                                <include reference="68"/>
+                                <include reference="69"/>
+                                <include reference="70"/>
+                                <include reference="71"/>
+                            </mask>
+                        </variation>
                         <constraints>
-                            <constraint firstItem="23" firstAttribute="centerY" secondItem="yd7-JS-zBw" secondAttribute="centerY" priority="1" id="39"/>
-                            <constraint firstItem="23" firstAttribute="centerX" secondItem="yd7-JS-zBw" secondAttribute="centerX" priority="1" id="41"/>
+                            <constraint id="64" firstItem="53" firstAttribute="trailing" secondItem="59" secondAttribute="trailing"/>
+                            <constraint id="65" firstItem="53" firstAttribute="bottom" secondItem="59" secondAttribute="bottom"/>
+                            <constraint id="68" firstItem="59" firstAttribute="height" secondItem="53" secondAttribute="height"/>
+                            <constraint id="69" firstItem="59" firstAttribute="width" secondItem="53" secondAttribute="width"/>
+                            <constraint id="70" firstItem="59" firstAttribute="leading" secondItem="53" secondAttribute="leading"/>
+                            <constraint id="71" firstItem="59" firstAttribute="top" secondItem="53" secondAttribute="top"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -34,6 +65,25 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Icon-60.png" width="180" height="180"/>
+        <image name="Icon-60.png" width="60" height="60"/>
+        <image name="Default-568h.png" width="320" height="568"/>
+        <image name="Default-Portrait.png" width="768" height="1004"/>
+        <image name="Default.png" width="320" height="480"/>
+        <image name="Icon-76.png" width="76" height="76"/>
+        <image name="Icon-Small-40.png" width="40" height="40"/>
+        <image name="Icon-Small.png" width="29" height="29"/>
+        <image name="icon.png" width="72" height="72"/>
+        <image name="info_greyed.png" width="32" height="32"/>
+        <image name="info_gross.png" width="512" height="512"/>
+        <image name="info.png" width="32" height="32"/>
+        <image name="logo_farbig.png" width="3150" height="435"/>
+        <image name="logo_hintergrund.jpg" width="1299" height="281"/>
+        <image name="logo_ver_3_klein.png" width="72" height="72"/>
+        <image name="settings_greyed.png" width="32" height="32"/>
+        <image name="settings.png" width="32" height="32"/>
     </resources>
+    <color key="tintColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedScreenMetrics key="destination" type="retina47"/>
+    </simulatedMetricsContainer>
 </document>
