--- a/cameratest/cameratest/cameratest/ChangePassword.xaml
+++ b/cameratest/cameratest/cameratest/ChangePassword.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="cameratest.ChangePassword"
@@ -35,7 +35,7 @@
       <Entry x:Name="newPassword" IsPassword="true" />
       <Label Text="neues Passwort wiederholen" />
       <Entry x:Name="newPasswordRepeat"  IsPassword="true" Completed="Completed_newPasswordRepeat"/>
-      <Button x:Name="changePassword" Text="Passwort ändern" IsEnabled="True" Clicked="changedPassword" />
+      <Button x:Name="changePassword" Text="Passwort ändern" IsEnabled="True" Clicked="changedPassword"  BackgroundColor="Gray" TextColor="White"/>
       
     </StackLayout>
       </ScrollView>
