--- a/cameratest/cameratest/cameratest/Settings.xaml
+++ b/cameratest/cameratest/cameratest/Settings.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="cameratest.Settings"
@@ -37,7 +37,7 @@
             </Picker.Items>
           </Picker>
     
-        <Button x:Name="changePassword" Text="Passwort ändern" IsEnabled="True" Clicked="wantToChangePassword" />
+        <Button x:Name="changePassword" Text="Passwort ändern" IsEnabled="True" Clicked="wantToChangePassword"  BackgroundColor="Gray" TextColor="White"/>
     
     </StackLayout>
       </ScrollView>
