--- a/cameratest/cameratest/cameratest/Registrierung.xaml
+++ b/cameratest/cameratest/cameratest/Registrierung.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="cameratest.Registrierung"
@@ -37,7 +37,7 @@
       <Entry x:Name="password" IsPassword="true" Text="{Binding}" TextChanged="Changed_password" Completed="Completed_password"/>
       <Label Text="Passwort wiederholen" />
       <Entry x:Name="passwordAgain" IsPassword="true" TextChanged="Changed_passwordAgain" Completed="Completed_passwordAgain"/>
-      <Button x:Name="register" Text="Registrieren" IsEnabled="True" Clicked="registering" />
+      <Button x:Name="register" Text="Registrieren" IsEnabled="True" Clicked="registering"  BackgroundColor="Gray" TextColor="White"/>
     </StackLayout>
     </ScrollView>
   </ContentPage.Content>
